@@ -1,6 +1,6 @@
 ---
 name: version
-version: 0.76_05
+version: 0.76_06
 author:
   - 'John Peacock E<lt>jpeacock@cpan.orgE<gt>'
 abstract: Perl extension for Version Objects
@@ -18,10 +18,10 @@ provides:
     version: 1.04
   version:
     file: lib/version.pm
-    version: 0.76_05
+    version: 0.76_06
   version::vxs:
     file: vutil/lib/version/vxs.pm
-    version: 0.76_05
+    version: 0.76_06
 generated_by: Module::Build version 0.3305
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
