@@ -34,7 +34,7 @@ Also referred to as "Dotted-Integer", these contains more than one decimal
 point and may have an optional embedded underscore, see L<Dotted-Decimal
 Versions>.  This is what is commonly used in most open source software as
 the "external" version (the one used as part of the tag or tarfile name).
-A leading 'v' character is optional, but strongly recommended for clarity.
+A leading 'v' character is now required and will warn if it missing.
 
 =back
 
@@ -44,7 +44,7 @@ if required:
 
   $v  = version->new(1.002);     # 1.002, but compares like 1.2.0
   $v  = version->new(1.002003);  # 1.002003
-  $v2 = version->new("1.2.3");   # v1.2.3
+  $v2 = version->new("v1.2.3");  # v1.2.3
 
 In specific, version numbers initialized as L<Decimal Versions> will
 stringify as they were originally created (i.e. the same string that was
@@ -146,7 +146,7 @@ The internal structure of version objects is a blessed hash with several
 components:
 
     bless( {
-      'original' => '1.2.3_4',
+      'original' => 'v1.2.3_4',
       'alpha' => 1,
       'qv' => 1,
       'version' => [
@@ -164,7 +164,8 @@ components:
 A faithful representation of the value used to initialize this version
 object.  The only time this will not be precisely the same characters
 that exist in the source file is if a short dotted-decimal version like
-v1.2 was used (in which case it will contain 'v1.2').
+v1.2 was used (in which case it will contain 'v1.2').  This form is
+B<STRONGLY> discouraged, in that it will confuse you and your users.
 
 =item qv
 
@@ -187,9 +188,10 @@ other version objects.
 
 In addition to the version objects, this modules also replaces the core
 UNIVERSAL::VERSION function with one that uses version objects for its
-comparisons.  The return from this operator is always the stringified form,
-but the warning message generated includes either the stringified form or
-the normal form, depending on how it was called.
+comparisons.  The return from this operator is always the stringified form
+as a simple scalar (i.e. not an object), but the warning message generated
+includes either the stringified form or the normal form, depending on how
+it was called.
 
 For example:
 
@@ -197,7 +199,7 @@ For example:
   $VERSION = 1.2;
 
   package Bar;
-  $VERSION = "1.3.5"; # works with all Perl's (since it is quoted)
+  $VERSION = "v1.3.5"; # works with all Perl's (since it is quoted)
 
   package main;
   use version;
@@ -343,8 +345,8 @@ in that the only delimiters supported are parentheses (or spaces).  It is
 the best way to initialize a short version without triggering the floating
 point interpretation.  For example:
 
-  $v1 = qv(1.2);         # 1.2.0
-  $v2 = qv("1.2");       # also 1.2.0
+  $v1 = qv(1.2);         # v1.2.0
+  $v2 = qv("1.2");       # also v1.2.0
 
 As you can see, either a bare number or a quoted string can usually 
 be used interchangably, except in the case of a trailing zero, which
@@ -563,43 +565,6 @@ that is not possible in earlier versions of Perl.  In other words:
 
   $version = version->new("v2.5.4");  # legal in all versions of Perl
   $newvers = version->new(v2.5.4);    # legal only in Perl >= 5.8.1
-
-=head2 What about v-strings?
-
-Beginning with Perl 5.6.0, an alternate method to code arbitrary strings
-of bytes was introduced, called v-strings.  They were intended to be an
-easy way to enter, for example, Unicode strings (which contain two bytes
-per character).  Some programs have used them to encode printer control
-characters (e.g. CRLF).  They were also intended to be used for $VERSION,
-but their use as such has been problematic from the start.
-
-There are two ways to enter v-strings: a bare number with two or more
-decimal points, or a bare number with one or more decimal points and a 
-leading 'v' character (also bare).  For example:
-
-  $vs1 = 1.2.3; # encoded as \1\2\3
-  $vs2 = v1.2;  # encoded as \1\2 
-
-However, the use of bare v-strings to initialize version objects is
-B<strongly> discouraged in all circumstances (especially the leading 
-'v' style), since the meaning will change depending on which Perl you 
-are running.  It is better to directly use L<"Dotted-Decimal Versions"> to 
-ensure the proper interpretation.
-
-If you insist on using bare v-strings with Perl > 5.6.0, be aware of the 
-following limitations:
-
-1) For Perl releases 5.6.0 through 5.8.0, the v-string code merely guesses, 
-based on some characteristics of v-strings.  You B<must> use a three part
-version, e.g. 1.2.3 or v1.2.3 in order for this heuristic to be successful.
-
-2) For Perl releases 5.8.1 and later, v-strings have changed in the Perl
-core to be magical, which means that the version.pm code can automatically
-determine whether the v-string encoding was used.
-
-3) In all cases, a version created using v-strings will have a stringified
-form that has a leading 'v' character, for the simple reason that sometimes
-it is impossible to tell whether one was present initially.
 
 =head1 SUBCLASSING
 
